// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Operational Solutions Points of Contact Components > matches the snapshot > 4innovation 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Office of Information Technology
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Enterprise Systems Solutions Group, Division of Applications Development and Support
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Innovative Design, Development, and Operations Contract (IDDOC)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Softrams
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Accountable Care Organization - Operational System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Office of Information Technology
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Enterprise Systems Solutions Group, Division of Applications Development and Support
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Innovative Design, Development, and Operations Contract (IDDOC)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Softrams
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Automated Plan Payment System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Medicare Plan Payment Group, Division of Payment Operations
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Beneficiary Claims Data API 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Office of Enterprise Data and Analytics
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Data Analytics and Strategy Group
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > CMS Box 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > CMS Qualtrics 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > CPI Vetting 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Centralized Data Exchange 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Innovation Support Platform (ISP)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Global Alliant
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Chronic Conditions Warehouse 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Office of Enterprise Data and Analytics
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Research Data Development Group
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            CMMI Technology Solution (CTS)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Softrams
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Consolidated Business Operations Support Center 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group, Division of System Support, Operations, and Security
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            CMMI Technology Solution (CTS)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Softrams
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Electronic File Transfer 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Expanded Data Feedback Reporting 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Innovation Support Platform (ISP)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Global Alliant
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > GovDelivery 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > GrantSolutions 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Health Data Reporting 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Innovation Support Platform (ISP)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Global Alliant
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Health Plan Management System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Division of Plan Data
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Healthcare Integrated General Ledger Accounting System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Office of Financial Management
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Accounting Management Group
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Innovation Payment Contractor 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group, Division of Budget Operations & Management
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          />
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              National Government Services (NGS)
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Innovation Support Platform 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Prime
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Global Alliant
            </h3>
          </div>
        </div>
      </li>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Subcontractor
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Acument
            </h3>
          </div>
        </div>
      </li>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Subcontractor
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              ICF International
            </h3>
          </div>
        </div>
      </li>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Subcontractor
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Tier 1 Consulting
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Integrated Data Repository 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Office of Information Technology
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Enterprise Architecture and Data Group, Division of Enterprise Information Management Services
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Learning and Diffusion Group 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Legal Vertical 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Master Data Management Program-Organization Relationship 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Office of Information Technology
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Enterprise Architecture and Data Group
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Master Data Management for Non-Claims Based Payments 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Office of Information Technology
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Enterprise Architecture and Data Group
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Measure and Instrument Development and Support 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Medicare Advantage Prescription Drug System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Medicare Plan Payment Group, Division of Payment Operations
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Outlook Mailbox 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Quality Vertical 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Research, Measurement, Assessment, Design, and Analysis 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Salesforce Application Review and Scoring 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            CMMI Technology Solution (CTS)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Softrams
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Salesforce CONNECT 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            CMMI Technology Solution (CTS)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Softrams
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Salesforce Letter of Intent 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            CMMI Technology Solution (CTS)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Softrams
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Salesforce Project Officer Support Tool / Portal 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            CMMI Technology Solution (CTS)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Softrams
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Salesforce Request for Application 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Center for Medicare and Medicaid Innovation
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Business Services Group
            </h3>
          </div>
        </div>
      </li>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        Contractors
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            CMMI Technology Solution (CTS)
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Softrams
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Points of Contact Components > matches the snapshot > Shared Systems 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Points of contact
    </h2>
    <div>
      <div
        class="mint-divider margin-y-6"
      />
      <h2>
        System owner
      </h2>
      <li
        class="usa-card margin-bottom-0"
        data-testid="Card"
      >
        <div
          class="usa-card__container radius-md padding-2 margin-bottom-2 margin-x-0"
        >
          <header
            class="usa-card__header font-body-xs padding-0"
            data-testid="CardHeader"
          >
            Office of Information Technology
          </header>
          <div
            class="usa-card__footer padding-0"
            data-testid="CardFooter"
          >
            <h3
              class="margin-0 line-height-sans-2"
            >
              Applications Management Group, Division of Shared Systems Management
            </h3>
          </div>
        </div>
      </li>
    </div>
  </div>
</DocumentFragment>
`;
